// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Spacer] renders correctly 1`] = `
<View
  style={
    [
      {
        "height": 1,
        "left": 0,
        "right": 0,
      },
      {
        "marginTop": 10,
      },
    ]
  }
/>
`;

exports[`[Spacer] renders with given size 1`] = `
<View
  style={
    [
      {
        "height": 1,
        "left": 0,
        "right": 0,
      },
      {
        "marginTop": 20,
      },
    ]
  }
/>
`;
